# gnome-mud

./: .gitlab-ci.yml  AUTHORS  BUGS  Makefile.am  README  ROADMAP  config.rpath  configure.ac  gnome-mud.doap  gnome-mud.schemas.in  gnome-mud.spec.in  meson.build  meson_options.txt  meson_post_install.sh
data/: Makefile.am  main.ui  meson.build  org.gnome.MUD.desktop.in  org.gnome.MUD.gresource.xml  org.gnome.MUD.gschema.xml  prefs.ui  style.css
doc/: meson.build
doc/gnome-mud-manual/: Makefile.am
doc/gnome-mud-manual/cs/: cs.po
doc/gnome-mud-manual/de/: de.po
doc/gnome-mud-manual/es/: es.po
doc/gnome-mud-manual/sv/: sv.po
po/: LINGUAS  Makevars  POTFILES.in  ar.po  az.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fr.po  fur.po  gl.po  hr.po  hu.po  id.po  mk.po  ml.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  (+2 more)
src/: Makefile.am  debug-logger.c  gnome-mud.c  meson.build  mud-character.c  mud-character.h  mud-connection-view.c  mud-connection-view.h  mud-connection.c  mud-connection.h  mud-connections.c  mud-connections.h  mud-input-view.c  mud-input-view.h  mud-input-view.ui  mud-line-buffer.c  mud-line-buffer.h  mud-log.c  mud-log.h  mud-mud.c  mud-mud.h  mud-parse-alias.c  mud-parse-base.c  mud-parse-trigger.c  mud-profile-manager.c  mud-profile-manager.h  mud-profile.c  mud-profile.h  mud-regex.c  mud-subwindow.c  mud-telnet.c  mud-telnet.h  mud-trigger.c  mud-window-prefs.c  mud-window-profile.c  mud-window-profile.h  mud-window.c  mud-window.h  utils.c
src/handlers/: meson.build  mud-telnet-charset.c  mud-telnet-echo.c  mud-telnet-eor.c  mud-telnet-handler-interface.c  mud-telnet-handlers.h  mud-telnet-mccp.c  mud-telnet-msp.c  mud-telnet-mssp.c  mud-telnet-naws.c  mud-telnet-naws.h  mud-telnet-new-environ.c  mud-telnet-ttype.c  mud-telnet-zmp.c
src/zmp/: meson.build  zmp-core.c  zmp-main.c  zmp-package-interface.c  zmp-subwindow.c
ui/: Makefile.am  main.glade  main.ui  muds.glade  muds.ui  prefs.glade  prefs.ui
